minor content update + alignment fix
changed alignment/size of text, removed transition on size

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ li a:visited {
 a {
         -webkit-transition: -webkit-transform 0.4s;
         -moz-transition: -moz-transform 0.4s;
-    transition: all 0.4s;
+    transition: color 0.4s;
 }
 a:active,
 a:link,
@@ -98,7 +98,16 @@ main,
     }
     p {
         font-size: 2.3em;
-        font-size: 3vw;
+        font-size: 3.15vw;
+    }
+    ul {
+        width: 67vw;
+    }
+    ul:first-child {
+        text-align: left;
+    }
+    ul:last-child {
+        text-align: right;
     }
     li {
         float: left;
@@ -107,7 +116,7 @@ main,
         width: 33%;
     }
     #about .container {
-        width: 60%;
-        width: 60vw;
+        width: 50%;
+        width: 50vw;
     }
 }
